remove old files

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
   p Is
     form
       input(type="text",id="product",name="product",placeholder="Firefox 21.x")
-      p compatable with
+      p compatible with
       input(type="text",id="mstrversion",name="mstrversion",placeholder="9.4.1 HF4")
       p ?
       input(type='submit')
