Add 931 and 940 product lines

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,9 @@ block content
   h1= title
   p Is
     form
-      input(type="text",id="product",name="product",placeholder="Firefox 21.x")
+      input(type="text",id="product",name="product",placeholder="ex. Firefox 21.x")
       p compatible with
-      input(type="text",id="mstrversion",name="mstrversion",placeholder="9.4.1 HF4")
+      input(type="text",id="mstrversion",name="mstrversion",placeholder="ex. 9.4.1 HF4")
       p ?
       input(type='submit')
   span
