--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,12 @@ extends layout
 block content
   script(src="/javascripts/autocomplete.js")
   h1= title
-  p Is
-    form
-      input(type="text",id="product",name="product",placeholder="ex. Firefox 21.x")
-      p compatible with
-      input(type="text",id="mstrversion",name="mstrversion",placeholder="ex. 9.4.1 HF4")
-      p ?
-      input(type='submit')
+  #form-section
+    p Is
+      form
+        input(type="text",id="product",name="product",placeholder="ex. Firefox 21.x")
+        p compatible with
+        input(type="text",id="mstrversion",name="mstrversion",placeholder="ex. 9.4.1 HF4")
+        p ?
+        input(type='submit', value='Check!')
   span
